--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,11 @@
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
-  - title: "Posts"
-    url: /year-archive/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "Pages"
-    url: /page-archive/
-  - title: "Collections"
-    url: /collection-archive/
-  - title: "External Link"
-    url: https://google.com
+  - title: "Home"
+    url: /
+  - title: "About"
+    url: /about/
+  - title: "Résumé"
+    url: /resume/
+  - title: "Projects"
+    url: /projects/
+  - title: "Blog"
+    url: /blog/
