Remove blog/search. Update bio

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
   - title: "Home"
     url: /
-  - title: "About"
-    url: /about/
+ # - title: "About"
+ #   url: /about/
   - title: "Résumé"
     url: /resume/
   - title: "Projects"
     url: /projects/
-  - title: "Blog"
-    url: /blog/
+ # - title: "Blog"
+ #   url: /blog/
